	- update travis config ubuntu/mac images
	- merge PR #466 added null check for second char (by chanduthedev)
	- merge PR #470 compiler warning fixes (by bobsayshilol)
	- merge PR #475 Update README.docker (by raksonibs)
	- merge PR #471 Fix a memory leak when an SHATYPE isn't supported (by bobsayshilol)
	- merge PR #488 Fix typos about INSTALL filenames (by raccoonback)

02/03/2019 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.1 'dan Eider':
	- merge PR #330 missing \r\n after http Connection:close (by gribunin)
	- merge PR #303 fix typo enpoint (by Majid Motallebikashani)
	- merge PR #129 seperate http web-admin listener (by Thibaut ACKERMANN)
	- regression from 4.5.1.0
		* readd pwd check
		* add to config missing web-admin-listen-on-workers option
	- merge docker branch
		* Add Docker file for all database backend.
	- merge sparc64 branch
		* Fix mem alingment issue on 64 bit architecture
		That issue caused earlier "bus error" on sparc64 and armhf
	- merge PR #336 Clarify Debian install (by David-dp-)
	- merge PR #339 RPM build fix (by Peter Hudec )

24/11/2018 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
Version 4.5.1.0 'dan Eider':
	Consider to change config file after upgrade, because it contains some 
	not backward compatible breaking changes !!
	- Security fixes 
	  Many thanks to Nicolas Edet (Cisco) !!
	  who reported all of the following issues:
		* DB/SQL injection in stun realm. Fix: add extra string validation.
		* DB/SQL injection in web-admin interface lack of admin user validation. 
		  Fix: add extra string validation.
	 	* Fix for earlier unsafe default settings: 
			o HTTPS administrator interface should be disabled by default
			  It could be enbled with "web-admin" option.
			o Default configuration allowed earlier forwarding traffic 
			  from an external interface to loopback interface. Now it
			  has been changed and option name is also changed!
