@@ -49,6 +49,8 @@ Version 4.5.1.2 'dan Eider':
 	- merge PR #475 Update README.docker (by raksonibs)
 	- merge PR #471 Fix a memory leak when an SHATYPE isn't supported (by bobsayshilol)
 	- merge PR #488 Fix typos about INSTALL filenames (by raccoonback)
+	- fix compiler warning comparison between signed and unsigned integer expressions
+	- fix compiler warning string truncation
 
 02/03/2019 Oleg Moskalenko <mom040267@gmail.com> Mihály Mészáros <misi@majd.eu>
 Version 4.5.1.1 'dan Eider':
